--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,1 +1,1 @@
-{"site_name":"test","active":"1","msg":"test","logo":"1624481695.jpg"}
+{"site_name":"test","active":"1","msg":"test","logo":"logo.jpg"}
